# cdn-traffic-report

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPARISON.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
.githooks/: commit-msg  pre-commit  setup.sh
.github/workflows/: test.yml
config/: settings.yaml.template
scripts/: akamai_report.py  browser_helpers.py  calendar_nav.py  cloudfront.py  config.py  contract_check.py  cpcode_select.py  data_extract.py  refresh_session.py
skills/cdn-report/: SKILL.md
tests/: conftest.py  test_browser_helpers.py  test_calendar_nav.py  test_cloudfront.py  test_config.py  test_contract_check.py  test_data_extract.py  test_mock_integration.py  test_refresh_session.py
tests/golden/: cloudfront_daily.json  contract_baseline.json
tests/mock_site/: index.html  mock_data.js
